# db-erd-viewer

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
examples/: example_schema.json  example_schema_large.json
references/: schema_format.md
src/db_erd_viewer/: cli.py  introspect_db.py  layout.py  parse_ddl.py  render_erd.py
